--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -9,29 +9,71 @@
 {% endblock %}
 
 {% block body %}
-    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée « sang placentaire »). Le cordon ombilical contient un sang particulièrement riche en cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br>
+    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée « sang placentaire »). Le cordon ombilical contient un sang particulièrement riche en cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
     -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
-    <br>
+    <br><br>
     -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
-    Plaquettes : aident le sang à coaguler</span></span> . 
-    Le don de sang placentaire est un acte gratuit, anonyme et volontaire. 
-    Cet acte se produit lors de l’accouchement, immédiatement après la naissance de l’enfant et une fois le cordon coupé, on prélève le sang issu du cordon ombilical. 
-    Une fois le prélèvement réalisé, il sera traité et stocké par LYMPHOBANK puis envoyé aux laboratoires de recherche partenaires français dans le but d’être utilisé pour faire avancer la recherche.
-    Votre don de sang de cordon servira <strong>uniquement</strong> pour un usage scientifique.
+    Plaquettes : aident le sang à coaguler</span></span> , ainsi il peut être utilisé par la médecine : pour soigner des personnes malades, ou pour faire avancer la recherche. 
+    <br><br>
+    Ce sang présent dans le cordon ombilical est prélevé par ponction, seulement lorsque l’accouchement est terminé : le bébé a été expulsé et le cordon a été coupé. 
+    Le don de sang placentaire est un acte <strong>indolore, gratuit, anonyme et volontaire.</strong>  
+    <br><br>
+    Celui-ci peut servir pour deux usages : thérapeutique ou scientifique.
+    En fonction de l’usage que vous choisirez, ce dernier n’aura pas le même devenir. 
+    <br><br>
+    Vous pouvez choisir de faire un don à usage thérapeutique afin d’aider les personnes malades, cependant il se peut qu’il soit réorienté ultérieurement vers un usage scientifique s’il est non conforme pour être greffer à un patient.
+    Dans ce cas ou si vous souhaitez directement faire un don à usage scientifique, le prélèvement sera réceptionné par l’EFS pour ensuite être traité et stocké par LYMPHOBANK puis envoyé aux <strong>laboratoires de recherche partenaires français</strong> dans le but d’être utilisé pour faire avancer la recherche.
     </p>
     <h1>Que peut-on donner ?</h1>
     <h2>Il est possible de donner deux éléments :</h2>
-    <p>lorsque le cordon est coupé, une ponction est réalisée dans la veine qui se trouve dans le cordon ombilical. 
-    Le sang de cordon est systématiquement utilisé pour produire des cellules souches hématopoïétiques, des cellules immunitaires, du sérum ou du plasma. Les cellules souches hématopoïétiques servent par exemple à tester des vaccins ou des biomédicaments (médicaments d’origine biologique) pour le traitement de cancers ou de maladies auto-immunes. Les cellules immunitaires sont une source de biomédicaments anti-tumoraux et le sérum placentaire, supplément indispensable dans les milieux de culture cellulaire, remplace le sérum d’origine animale.</p>
+    <p>Lorsque le cordon est coupé, une ponction est réalisée dans la veine qui se trouve dans le cordon ombilical. 
+    Le sang de cordon est systématiquement utilisé pour produire des cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    <br><br>
+    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
+    Plaquettes : aident le sang à coaguler</span></span>, des cellules immunitaires, du sérum ou du plasma. Les cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+    -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    <br><br>
+    -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
+    Plaquettes : aident le sang à coaguler</span></span> servent par exemple à tester des vaccins ou des biomédicaments (médicaments d’origine biologique) pour le traitement de cancers ou de maladies auto-immunes. Les cellules immunitaires sont une source de biomédicaments anti-tumoraux et le sérum placentaire, supplément indispensable dans les milieux de culture cellulaire, remplace le sérum d’origine animale.</p>
     <button class="accordion"><p class="accordionTitle">Le cordon ombilical</p></button>
     <div class="panel">
         <img id="cordon" class="illustrationAccordeon" src={{ asset ('img/icons/cordon.svg')}}>
         <p>
-        Le cordon ombilical permet d’isoler différents types de cellules telles que les cellules souches mésenchymateuses ou les cellules endothéliales . Les cellules souches mésenchymateuses sont utilisées pour le développement d’approches innovantes de thérapie cellulaire régénératrices, car elles jouent un rôle dans la réparation des tissus osseux, cartilagineux, adipeux ou musculaires. Les cellules endothéliales servent de modèle d’étude in vitro de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.
+        Le cordon ombilical permet d’isoler différents types de cellules telles que les cellules souches <span class="tooltip">mésenchymateuses <span class="tooltipText">Les cellules souches mésenchymateuses sont des cellules issues de la moelle osseuse qui jouent un rôle dans la production et réparation de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> ou les cellules <span class="tooltip">endothéliales <span class="tooltipText">Les cellules endothéliales sont des cellules minces et plates qui permettent un transfert rapide des substances entre le sang et le liquide interstitiel.
+        <br><br>
+        Liquide interstitiel : Le liquide interstitiel remplit l'espace entre les capillaires sanguins et les cellules, Il facilite les échanges de nutriments et de déchets entre ceux-ci.
+        <br><br>
+        Capillaires : Le rôle des capillaires est de nourrir les tissus en nutriments et oxygène. Reliés aux veines et aux artères, les capillaires sanguins transportent les nutriments, notamment le glucose, et le dioxygène.
+        </span></span> endothéliales. Les cellules souches mésenchymateuses sont utilisées pour le développement d’approches innovantes de thérapie cellulaire régénératrices, car elles jouent un rôle dans la réparation des tissus osseux, cartilagineux, adipeux ou musculaires. Les cellules <span class="tooltip">endothéliales <span class="tooltipText">Les cellules endothéliales sont des cellules minces et plates qui permettent un transfert rapide des substances entre le sang et le liquide interstitiel.
+        <br><br>
+        Liquide interstitiel : Le liquide interstitiel remplit l'espace entre les capillaires sanguins et les cellules, Il facilite les échanges de nutriments et de déchets entre ceux-ci.
+        <br><br>
+        Capillaires : Le rôle des capillaires est de nourrir les tissus en nutriments et oxygène. Reliés aux veines et aux artères, les capillaires sanguins transportent les nutriments, notamment le glucose, et le dioxygène.
+        </span></span> servent de modèle d’étude in vitro de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.
         </p>
     </div>
     <p>Le placenta est également une source de cellules souches mésenchymateuses.</p>
-    <p>Faire schéma</p>
+
+    <h2>Schéma explicatif (cliquez pour en savoir plus) :</h2>
+    <div class="schemaDon">
+        <div class="schemaDonStart">
+            <input type="checkbox">
+            <img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}>
+        </div>
+        <div class="schemaDonSteep1">
+            <div class="doubleFleche">
+                <i id="sangFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
+                <i id="cordonFleche" class="fas fa-long-arrow-alt-right fa-4x"></i>
+            </div>
+            <div class="sangCordon">
+                <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                <img id="cordonIcon" class="icon" src={{ asset ('img/icons/cordon.svg')}}>
+            </div>
+        </div>
+    </div>
+    
+    
     <h1>Quel usage pour ce don ?</h1>
     <p>Le don de sang placentaire peut servir pour 2 usages :</p>
     <h2>Un usage scientifique :</h2>
@@ -73,11 +115,19 @@
     <h2>Il existe deux types de greffes :</h2>
     <button class="accordion"><p class="accordionTitle">L’autogreffe</p></button>
     <div class="panel">
-        <p>Les cellules souches hématopoïétiques vont être prélevées et congelées dans des banques autologues afin d’être réinjectées par la suite en cas de besoin. Cet acte est interdit en France et ne montre pas grande utilité puisque la réaction immunitaire potentielle appelée « effet de greffon » déclenchée par les lymphocytes T  du greffon lorsqu’ils reconnaissent et attaquent les cellules malignes sont beaucoup plus faibles.</p>
+        <p>Les cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+        -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+        <br><br>
+        -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
+        Plaquettes : aident le sang à coaguler</span></span> vont être prélevées et congelées dans des banques autologues afin d’être réinjectées par la suite en cas de besoin. Cet acte est interdit en France et ne montre pas grande utilité puisque la réaction immunitaire potentielle appelée « effet de greffon » déclenchée par les lymphocytes T  du greffon lorsqu’ils reconnaissent et attaquent les cellules malignes sont beaucoup plus faibles.</p>
     </div>
     <button class="accordion"><p class="accordionTitle">L’allogreffe</p></button>
     <div class="panel">
-        <p>Les cellules souches hématopoïétiques vont être injectées dans un patient pouvant être atteint de différentes maladies. Ce traitement a pour but de permettre aux cellules souches du donneur de se rendre à la moelle osseuse, où elles produiront des cellules sanguines et activeront l’effet de greffon contre la tumeur. Elles ont également d’autres rôles : traiter intensivement les cellules cancéreuses restantes, diminuant ainsi la probabilité d’un retour de la maladie, d’inactiver le système immunitaire pour réduire les probabilités de rejet du greffon, de permettre aux cellules du donneur de se rendre à la moelle osseuse, où elles produiront des cellules sanguines et activeront l’effet du greffon contre la tumeur.</p>
+        <p>Les cellules souches <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+        -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+        <br><br>
+        -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
+        Plaquettes : aident le sang à coaguler</span></span> vont être injectées dans un patient pouvant être atteint de différentes maladies. Ce traitement a pour but de permettre aux cellules souches du donneur de se rendre à la moelle osseuse, où elles produiront des cellules sanguines et activeront l’effet de greffon contre la tumeur. Elles ont également d’autres rôles : traiter intensivement les cellules cancéreuses restantes, diminuant ainsi la probabilité d’un retour de la maladie, d’inactiver le système immunitaire pour réduire les probabilités de rejet du greffon, de permettre aux cellules du donneur de se rendre à la moelle osseuse, où elles produiront des cellules sanguines et activeront l’effet du greffon contre la tumeur.</p>
     </div>
     <div class="cardsHosto">
         <div class="card">
