--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,9 @@
             </nav>
             
             <div class="main">
-                {% block body %}{% endblock %}
+                {% block body %}
+                
+                {% endblock %}
                 <div class="gotoTop">
                     <a href="#top" class="linktoTop">
                         <button class="btntoTop"><i class="fas fa-arrow-circle-up fa-4x"></i></button>
